--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,20 @@
-
-name: Java CI
-
+name: CI Pipeline
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+push:
+branches: [main]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn clean install
+build:
+runs-on: ubuntu-latest
+steps:
+- name: Checkout Repository
+uses: actions/checkout@v3
+- name: Set Up Java 17
+
+uses: actions/setup-java@v3
+with:
+distribution: 'temurin'
+java-version: '17'
+- name: Build and Test
+run: |
+mvn clean install
+mvn test
