added location to pom.xml in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           java-version: '17'
 
       - name: Build and Test
+        working-directory: ./project-folder
         run: |
           mvn clean install
           mvn test
