--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '17'
 
       - name: Build and Test
-        working-directory: ./project-folder
+        working-directory: ./junit-example
         run: |
           mvn clean install
           mvn test
